Removed accidental Bootstrap js file in geder, which fixed toggle / collapse menu issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,11 @@ header {
     min-height: 420px;
 }
 
+@media only screen and (max-width: 600px)
+
+.hero-image  {
+}
+
 /* About */
 
 .about {
